--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,7 +67,7 @@ h2:hover {
 .galary {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 15px;
   overflow: hidden;
   padding: 50px;
@@ -86,11 +86,11 @@ h2:hover {
 .galary::before {
     content: "";
     position: absolute;
-    width: 25%;
-    height: 200%;
+    width: 45%;
+    height: 300%;
     background-image: linear-gradient(90deg, #f25f,#e75e);
-    animation: move 8s ease-in-out infinite;
-    -webkit-animation: move 8s ease-in-out infinite;
+    animation: move 8s linear infinite;
+    -webkit-animation: move 8s linear infinite;
 }
 @keyframes move {
     to {
@@ -106,17 +106,17 @@ h2:hover {
     position: absolute;
     inset: 5px;
     background-color: #222;
-    border-radius: 99px;
-    -webkit-border-radius: 99px;
-    -moz-border-radius: 99px;
-    -ms-border-radius: 99px;
-    -o-border-radius: 99px;
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
 }
 
 /* The Images Of Galary-Continer */
 .galary .images {
   overflow: hidden;
-  height: 300px;
+  height: 100%;
   border: 6px solid #333;
   display: flex;
   align-items: center;
@@ -160,23 +160,37 @@ h2:hover {
   justify-content: center;
   z-index: 2000;
   background-color: rgba(34, 34, 34, 0.4);
-  gap: 10px;
   top: 0;
 }
 .show span {
   font-size: 60px;
-  color: white;
+  color: crimson;
   cursor: pointer;
   transition-duration: 0.3;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 100;
 }
-.show span:hover {
+.show #prev {
+  left: 0;
+}
+.show #next {
+  right: 0;
+}
+@media (max-width: 576px) {
+  .show img {
+    width: 100%;
+  }
+}
+.show span:hover i {
   transform: scale(1.1);
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   -ms-transform: scale(1.1);
   -o-transform: scale(1.1);
 }
-.show span:active {
+.show span:active i {
   transform: scale(1);
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
@@ -187,7 +201,7 @@ h2:hover {
 /* Close The Box Show */
 #close {
   position: absolute;
-  top: 10px;
+  top: 30px;
   right: 20px;
   color: crimson;
 }
